compiler/testData/diagnostics/tests/redeclarations/RedeclarationInDefaultObject.kt
class A {
    default object B {
        class <!REDECLARATION!>G<!>
        val <!REDECLARATION!>G<!> = 1
    }
}